[external-system-ops] code review improvements